[GTK] youtube HTML5 videos in fullscreen, after <Esc>, can't go fullscreen again https://bugs.webkit.org/show_bug.cgi?id=127064

When pressing <Esc> or <f> at full screen, the WebView shall emit the
event webkitfullscreenchange, but wk2gtk does not emit it. This is
because the WebView manages directly the exit of the full screen.

With this patch the WebView calls requestExitFullScreen to the full
screen manager, instead of managing directly the exit of the full
screen, and the event webkitfullscreenchange will be dispatched
correctly.

Reviewed by Martin Robinson.

No tests are included because there is a bug in WKTR that prevents the
execution of a test for this patch. See
https://bugs.webkit.org/show_bug.cgi?id=127348

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseKeyPressEvent): Call
webkitWebViewBaseRequestExitFullScreen.
(webkitWebViewBaseRequestExitFullScreen): Added.
* UIProcess/API/gtk/WebKitWebViewBasePrivate.h: Ditto.


Canonical link: https://commits.webkit.org/145591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162724 268f45cc-cd09-0410-ab3c-d52691b4dbfc